   paper with nice algorithm: http://citeseer.ist.psu.edu/cache/papers/cs/25021/http:zSzzSzfractal.dam.fmph.uniba.skzSz~sccgzSzproceedingszSz1998zSzZalik.pdf/zalik98quick.pdf
20121024 Request by Rick Rutgers: widening polygon contour

version 1.11:

	Fixes:
	- fix metadata [Mohammad S Anwar]

	Improvements:
	- link to github distributions in meta-data.

version 1.10: Wed  3 Jan 11:04:43 CET 2018
	Another release, to test releasing to github.

	Changes:
	- require perl 5.10

	Improvements:
	- documentation improvements

version 1.09: Wed  3 Jan 10:56:42 CET 2018
	Another release, to test releasing to github.

	Improvements:
	- format option to object string() and points()

version 1.08: Tue  2 Jan 12:01:29 CET 2018

	Improvements:
	- convert to GIT
	- move to GitHub
	- documentation improvements
	- indentation tabs should be blanks.

version 1.07: Wed 27 Dec 11:14:00 CET 2017

	Fixes:
	- float rounding issue in Perl >= 5.27 breaks tests [cpan_testers]

	Improvements:
	- new ::Calc::polygon_format()

version 1.06: Sun 16 Jul 13:04:43 CEST 2017

	Fixes:
	- missed a spelling fix.  rt.cpan.org#118297 [Gregor Herrmann]
	- fix $obj->mirror rt.cpan.org#122487 [Michael Scott]

	Improvements:
	- remove dependency to Test::Pod

version 1.05: Wed Dec 28 12:55:41 CET 2016

	Fixes:
	- spelling fix.  rt.cpan.org#118297 [Angel Abad]

	Improvements:
	- add distance to polygon calculation [Andreas Koenig]
	- use Perl from PATH when running in tests stand-alone.

version 1.04: Fri 23 Sep 16:03:17 CEST 2016

	Fixes:
	- contains on vertical edge
	  rt.cpan.org#118030 [Marcus Robst]

	Improvements:
	- remove duplicate points in chainHull_2D
	  reported by [Michael R. Davis]

version 1.03: Tue Jan 21 14:33:07 CET 2014

	Improvements:
	- add example to centroid, suggested by [Michael R. Davis]
	- change documentation style.

version 1.02: Mon Sep 19 12:06:32 CEST 2011

	Improvements:
	- Added centroid functions, implemented by [Fred Zellinger]

version 1.01: Mon May 25 14:35:26 CEST 2009
